...
                            <constraint firstItem="ZZf-Qo-b2S" firstAttribute="trailing" secondItem="RQp-Pu-2zA" secondAttribute="trailing" id="ogx-Tf-YoZ"/>
                            <constraint firstItem="RQp-Pu-2zA" firstAttribute="top" secondItem="b9j-MW-rA1" secondAttribute="top" id="w23-2Z-IJo"/>
                            <constraint firstItem="RQp-Pu-2zA" firstAttribute="trailing" secondItem="b9j-MW-rA1" secondAttribute="trailing" id="yfX-rS-Zcr"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="b9j-MW-rA1"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Map" image="map" catalog="system" selectedImage="map.fill" id="2rh-xv-I4G"/>
                    <connections>
                        <outlet property="mapView" destination="RQp-Pu-2zA" id="Exd-A1-at1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Rin-Rj-XjO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="0Zt-MC-haW" firstAttribute="top" secondItem="LKd-qp-Y5T" secondAttribute="top" id="Zha-Zw-wjb"/>
                            <constraint firstItem="0Zt-MC-haW" firstAttribute="trailing" secondItem="LKd-qp-Y5T" secondAttribute="trailing" id="cth-mH-Wig"/>
                            <constraint firstItem="5aA-P4-vlg" firstAttribute="top" secondItem="0Zt-MC-haW" secondAttribute="bottom" id="wKp-Y7-bNt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="LKd-qp-Y5T"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Deals" image="dollarsign.circle" catalog="system" selectedImage="dollarsign.circle.fill" id="teh-3G-nHA"/>
                    <connections>
                        <outlet property="collectionView" destination="5aA-P4-vlg" id="ZPy-Pc-Grg"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="pJq-VZ-in4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vtQ-3v-AeG">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
                                <items>
                                    <navigationItem title="eBay Categories" id="0tD-Gv-9mt">
                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="VkE-xJ-pFH">
                                            <connections>
                                                <action selector="onPlusTapped" destination="WyT-JA-Wp5" id="kOo-Sg-w8T"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
