...

    func updateUI() {
        tableView.reloadData()
    }
    
    @IBAction func onPlusTapped(){
        let alert = UIAlertController(title: "Add Category", message: nil, preferredStyle: .alert)
        alert.addTextField { (textField) in
            textField.placeholder = "Category"
        }
        let action = UIAlertAction(title: "Add", style: .default) { (_) in
            if alert.textFields?.first!.text! != "" {
                let name = alert.textFields?.first!.text!
                self.model.addDealCategory(name!)
                self.updateUI()
                self.dealViewController.getAllDealCategoryItems()
            }
...
